Initial creation of Journal object
Co-Authored-by: Ryan Bass <theryanbass@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-
+  <form>
+    <label>Date:
+      <input type="datetime">
+    </label>
+    <label>Entry
+      <textarea></textarea>
+    </label>
+  </form>
+  <ul id='entries'></ul>
 </body>
 </html>
