Implement logic to count # of vowels & consonants in entry
Co-Authored-by: Ryan Bass <theryanbass@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
 <body>
   <form>
     <label>Date:
-      <input type="datetime">
+      <input id='date' type="date">
     </label>
     <label>Entry
-      <textarea></textarea>
+      <textarea id='entry'></textarea>
     </label>
+    <button type='submit'>SUBMIT!</button>
   </form>
   <ul id='entries'></ul>
 </body>
